--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: 碎纸的普拉狮
-location: lab
+title: 普拉狮是什么狮？
+
 email: polarlion@qq.com
 
 # author :
