--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,8 @@ email: polarlion@qq.com
 description: > # this means to ignore newlines until "baseurl:"
   千山鸟飞绝  万径人踪灭<br />
   孤舟蓑笠翁  独钓寒江雪
-baseurl: "/test" # the subpath of your site, e.g. /blog
+# baseurl: "/test" # the subpath of your site, e.g. /blog
+baseurl: ""
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 weibo_username: 普拉狮普拉狮
 twitter_username: Polarlion
